[project]
name = "lccli"
version = "0.1.0"
description = "CLI for logging into LeetCode CN, fetching problems, running code, and submitting solutions."
requires-python = ">=3.11"

[project.scripts]
lccli = "lccli.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

